@@ -1,3 +1,10 @@
+2000-08-09  Christopher James Lahey  <clahey@helixcode.com>
+
+	* mail-display.c, mail-format.c, mail-ops.c: Fixed some warnings.
+
+	* message-list.c: Fix the call to e_popup_menu_run to match the
+	new signature.
+
 2000-08-09  Ettore Perazzoli  <ettore@helixcode.com>
 
 	* folder-browser-factory.c (control_activate): Create a "print
